--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,13 +6,21 @@ orbs:
   welcome: circleci/welcome-orb@0.4.1
 # Orchestrate or schedule a set of jobs
 
-
+commands:
+  print_pipeline_id:
+    parameters:
+      id:
+        type: string
+    steps:
+      - run: echo << parameters.id >>
 
 jobs:
   build:
     docker:
       - image: circleci/node:13.8.0
     steps:
+      - print_pipeline_id:
+          id: << pipeline.id >>
       - checkout
       - run:
           name: "echo an env var that is part of our project"
