--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
           command: |
             aws cloudformation deploy \
               --template-file template.yml \
+              --region us-west-w \
               --stack-name my-stack
 workflows:
   my_workflow:
