--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           command: |
             aws cloudformation deploy \
               --template-file template.yml \
-              --region us-west-w \
+              --region us-west-2 \
               --stack-name my-stack
 workflows:
   my_workflow:
